Fixed visibility bug on mobile devices and added custom scroll bar for chrome browsers

--- a/styles.css
+++ b/styles.css
@@ -7,19 +7,20 @@
 /* Custom Scrollbar */
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 9px;
 }
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: transparent;
+  border-radius: 5px;
 }
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: rgb(48, 48, 48);
 }
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: rgb(36, 36, 36);
 }
 
 body {
@@ -33,8 +34,7 @@ body {
   justify-content: center;
   text-align: center;
   height: 100vh;
-  margin: 0 1.5rem;
-  overflow: hidden;
+  margin: auto 1.5rem;
 }
 .container {
   display: flex;
